# netidx

./: .config  .gitignore  0.pid  AGENTS.md  CHANGELOG  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  README_NEW.md  README_OLD.md  TODO.md  build.rs  netidx-browser.webm  notes  rust-toolchain  rustfmt.toml  todo  todo-local
examples/: Cargo.toml  README.md  custom_type.rs  temperature_monitor.rs
examples/examples/: building_sensors_glob_subscriber.rs  building_sensors_publisher.rs  channel_client.rs  channel_server.rs  clustering.rs  container_client.rs  container_server.rs  embedded_archive.rs  failover_publisher.rs  failover_subscriber.rs  load_balancing_publisher.rs  load_balancing_subscriber.rs  resilient_subscriptions.rs  rpc_client.rs  rpc_server.rs  table_dashboard.rs  typed_channel_client.rs  typed_channel_server.rs
json-pubsub-tools/: Cargo.toml  ac.conf  resolver-krb5.conf  resolver-server-krb5.conf  resolver-server.conf  resolver.conf
json-pubsub-tools/src/: main.rs  publisher.rs  resolver.rs  resolver_server.rs  stress_publisher.rs  stress_subscriber.rs  subscriber.rs
netidx/: Cargo.toml
netidx-archive/: Cargo.toml
netidx-archive/src/: config.rs  lib.rs  logfile.rs  recorder_client.rs  test.rs
netidx-archive/src/logfile/: arraymap.rs  index.rs  mod.rs  reader.rs  test.rs  writer.rs
netidx-archive/src/logfile_collection/: index.rs  mod.rs  reader.rs  test.rs  writer.rs
netidx-archive/src/recorder/: controls.rs  logfile_collection.rs  logfile_index.rs  mod.rs  oneshot.rs  publish.rs  record.rs
netidx-archive/test-collection/0/: current  pathindex
netidx-archive/test-recorder/0/: current  pathindex
netidx-browser/: Cargo.toml  netidx-browser.desktop  todo
netidx-browser/assets/: graphix.sublime-syntax
netidx-browser/flatpak/: io.github.estokes.NetidxBrowser  run-browser.sh
netidx-browser/src/: backend.rs  browser_prelude.gx  bscript.rs  builtins.rs  cairo_backend.rs  chrome.rs  containers.rs  formula.rs  lineplot.rs  main.rs  menu_bar.rs  mod.rs  table.rs  util.rs  view.rs  widgets.rs
netidx-browser/src/editor/: completion.rs  expr_inspector.rs  expr_util.rs  highlight.rs  mod.rs  path_update.rs  prop_panel.rs  source_inspector.rs  tree.rs  tree_model.rs  tree_view.rs  type_ed.rs  util.rs  widgets.rs
netidx-browser/src/graphix/: mod.gx  mod.gxi
netidx-browser/src/gtk_widgets/: button.rs  chart.rs  combo.rs  containers.rs  entry.rs  image.rs  key_handler.rs  label.rs  link_button.rs  mod.rs  progress.rs  radio.rs  scale.rs  search_entry.rs  switch.rs  table.rs  toggle.rs
netidx-browser/src/table/: mod.rs  raeified.rs  shared.rs
netidx-bscript/: Cargo.toml
netidx-bscript/proptest-regressions/expr/: test.txt
netidx-bscript/src/: compiler.rs  dbg.rs  env.rs  expr.rs  lambda.rs  lib.rs  node.rs  parser.rs  pattern.rs  rt.rs  stdfn.rs  test.rs  tests.rs  typ.rs  typecheck.rs  vm.rs
netidx-bscript/src/expr/: mod.rs  modpath.rs  pattern.rs  print.rs  resolver.rs  test.rs
netidx-bscript/src/node/: array.rs  callsite.rs  compiler.rs  data.rs  genn.rs  lambda.rs  mod.rs  op.rs  pattern.rs  select.rs  typecheck.rs
netidx-bscript/src/parser/: mod.rs  test.rs
netidx-bscript/src/stdfn/: core.rs  mod.rs  net.rs  rand.rs  re.rs  str.rs  test.rs  time.rs
netidx-bscript/src/typ/: fntyp.rs  mod.rs  tval.rs  tvar.rs
netidx-bscript/src/vm/: dbg.rs  env.rs  mod.rs  node.rs
netidx-container/: Cargo.toml
netidx-container/src/: db.rs  lib.rs  rpcs.rs  stats.rs
netidx-core/: Cargo.toml
netidx-core/src/: chars.rs  lib.rs  pack.rs  path.rs  pool.rs  test.rs  utils.rs
netidx-derive/: Cargo.toml
netidx-derive/src/: lib.rs
netidx-ffi/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
netidx-ffi/examples/: .clangd  .gitignore  Makefile  channel_client.c  channel_client.cpp  channel_server.c  channel_server.cpp  publisher.c  publisher.cpp  rpc_client.c  rpc_client.cpp  rpc_server.c  rpc_server.cpp  stress.c  stress.cpp  subscriber.c  subscriber.cpp  subscriber_simple.c  subscriber_simple.cpp
netidx-ffi/src/: channel.rs  config.rs  error.rs  lib.rs  path.rs  publisher.rs  rpc.rs  runtime.rs  subscriber.rs  value.rs
netidx-incscript/: Cargo.toml
netidx-incscript/src/: expr.rs  formula.rs  lib.rs  parser.rs  stdfn.rs  vm.rs
netidx-netproto/: Cargo.toml
netidx-netproto/proptest-regressions/: test.txt
netidx-netproto/src/: glob.rs  lib.rs  pbuf.rs  publisher.rs  pval.rs  resolver.rs  test.rs  valarray.rs  value.rs  value_parser.rs
netidx-pool/: Cargo.toml
netidx-pool/src/: arc.rs  lib.rs  pooled.rs  test.rs
netidx-protocols/: Cargo.toml
netidx-protocols/src/: archive.rs  channel.rs  cluster.rs  glob.rs  lib.rs  pack_channel.rs  parser.rs  rpc.rs  value_type.rs  view.rs
netidx-sysinfo/: Cargo.toml
netidx-sysinfo/src/: main.rs
netidx-tools/: Cargo.toml  log  out
netidx-tools-core/: Cargo.toml
netidx-tools-core/src/: lib.rs
netidx-tools/src/: activation.rs  archive.rs  browser.rs  browser_gui.rs  container.rs  main.rs  publisher.rs  record_client.rs  recorder.rs  resolver.rs  resolver_server.rs  shell.rs  stress_channel_publisher.rs  stress_channel_subscriber.rs  stress_publisher.rs  stress_subscriber.rs  subscriber.rs  view.rs  wsproxy.rs
netidx-tools/tests/: derive_graphix_compat.rs
netidx-value/: Cargo.toml
netidx-value/src/: abstract_type.rs  array.rs  convert.rs  lib.rs  op.rs  parser.rs  pbuf.rs  print.rs  test.rs  typ.rs
netidx-wsproxy/: Cargo.toml
netidx-wsproxy/example/: index.html  netidx-ws.js
netidx-wsproxy/src/: config.rs  lib.rs  protocol.rs
netidx/examples/: README.md  bidirectional.rs  simple_publisher.rs  simple_subscriber.rs  standalone.rs  temperature_display.rs  temperature_monitor.rs
netidx/src/: auth.rs  batch_channel.rs  channel.rs  chars.rs  config.rs  glob.rs  k5secstore.rs  lib.rs  local_secstore.rs  pack.rs  path.rs  pool.rs  publisher.rs  resolver.rs  resolver_server.rs  resolver_single.rs  resolver_store.rs  secctx.rs  secstore.rs  shard_resolver_store.rs  subscriber.rs  test.rs  tls.rs  utils.rs
test/: Cargo.toml
test/src/: main.rs
(+304 files in other folders)
