[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = 1

[workspace.dependencies]
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
arrayvec = "0.7.4"
async-stream = "0.3"
base64 = "0.22"
bitflags = "2"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "^0.4.24", features = ["serde"]}
combine = "4"
compact_str = { version = "0.8", features = ["serde"] }
crossbeam = "0.8"
cross-krb5 = { version = "0.4", default-features = false }
derive_builder = "0.20"
digest = "0.10"
diligent-date-parser = "0.1.4"
dirs = "5"
enumflags2 = "0.7"
env_logger = "0.11"
fs3 = "0.5"
futures = "0.3"
futures-util = "0.3"
fxhash = "0.2"
gdk = "0.18"
gdk-pixbuf = "0.18"
gio = "0.18"
glib = "0.18"
globset = "0.4"
gtk = { version = "0.18", features = ["v3_24"] }
hdrhistogram = "7"
if-addrs = "0.13"
immutable-chunkmap = "2"
indexmap = "2"
keyring = "3"
lazy_static = "1"
log = "0.4"
memmap2 = "0.9"
num_cpus = "1"
once_cell = "1.17.2"
packed_struct = "0.10"
packed_struct_codegen = "0.10"
pango = "0.18"
parking_lot = "0.12.1"
pin-utils = "0.1"
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
plotters-backend = "0.3"
plotters = { version = "0.3", default-features = false, features = ["datetime", "line_series", "ttf"] }
radix_trie = "0.2"
rand = "0.8.5"
rayon = "1"
regex = "1"
rust_decimal = { version = "1",  features = ["serde-with-float", "serde-with-str", "serde-with-arbitrary-precision"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
sha3 = "0.10"
sled = { version = "0.34" }
smallvec = { version = "1", features = ["const_generics", "union"] }
sourceview4 = "0.5"
structopt = "0.3"
tokio-rustls = "0.26"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "fs", "sync", "process", "macros", "signal", "io-std"] }
triomphe = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
warp = { version = "0.3", features = ["tls"] }
webpki = "0.22"
x509-parser = "0.16"
zstd = { version = "0.13", features = ["zstdmt"] }

[workspace]
resolver = "2"
members = [
    "netidx-core",
    "netidx-netproto",
    "netidx",
    "netidx-archive",
    "netidx-bscript",
    "netidx-protocols",
    "netidx-tools",
    "netidx-tools-core",
    "netidx-browser",
    "netidx-container",
    "netidx-derive",
    "netidx-wsproxy"
]
exclude = ["cfg/tls/id-win"]
