[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false


[profile.dev]
opt-level = "s"
lto = "thin"
debug = true

[workspace.dependencies]
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
arrayvec = "0.7.4"
base64 = "0.22"
bitflags = "2"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "^0.4.24", features = ["serde"] }
combine = "4"
compact_str = { version = "0.9", features = ["serde"] }
crossbeam = "0.8"
crossbeam-queue = "0.3"
cross-krb5 = { version = "0.4", default-features = false }
ctrlc = { version = "3", features = ["termination"] }
derive_builder = "0.20"
digest = "0.10"
diligent-date-parser = "0.1.4"
dirs = "6"
enumflags2 = "0.7"
env_logger = "0.11"
escaping = "0.2.3"
fish-printf = "0.2.1"
fs3 = "0.5"
futures = "0.3"
fxhash = "0.2"
globset = "0.4"
graphix-shell = { path = "../graphix/graphix-shell", version = "0.2.1" }
graphix-rt = { path = "../graphix/graphix-rt", version = "0.2.1" }
graphix-compiler = { path = "../graphix/graphix-compiler", version = "0.2.1" }
hdrhistogram = "7"
if-addrs = "0.14"
immutable-chunkmap = { version = "2.1.0", features = ["pool", "serde"] }
indexmap = "2"
keyring = "3"
log = "0.4"
memmap2 = "0.9"
num_cpus = "1"
once_cell = "1.17.2"
packed_struct = "0.10"
packed_struct_codegen = "0.10"
parking_lot = "0.12.1"
pin-utils = "0.1"
poolshark = { version = "0.2.5" }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
rand = "0.9"
rayon = "1"
regex = "1"
rust_decimal = { version = "1", features = [
    "serde-with-float",
    "serde-with-str",
    "serde-with-arbitrary-precision",
] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
seq-macro = "0.3"
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
sha3 = "0.10"
sled = { version = "0.34" }
smallvec = { version = "1", features = ["const_generics", "union"] }
structopt = "0.3"
tempdir = "0.3.7"
tokio-rustls = "0.26"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "fs",
    "sync",
    "process",
    "macros",
    "signal",
    "io-std",
] }
triomphe = { version = "0.1.15" }
uuid = { version = "1", features = ["v4", "serde"] }
warp = { version = "0.3", features = ["tls"] }
x509-parser = "0.18"
zstd = { version = "0.13", features = ["zstdmt"] }

[workspace]
resolver = "2"
members = [
    "netidx-core",
    "netidx-netproto",
    "netidx-value",
    "netidx",
    "netidx-archive",
    "netidx-protocols",
    "netidx-tools",
    "netidx-tools-core",
    "netidx-container",
    "netidx-derive",
    "netidx-wsproxy",
    "examples",
]
exclude = ["cfg/tls/id-win"]
