[package]
name = "netidx-examples"
version = "0.31.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "netidx example programs"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[dependencies]
netidx-core = { path = "../netidx-core" }
netidx-netproto = { path = "../netidx-netproto" }
netidx-value = { path = "../netidx-value" }
netidx = { path = "../netidx" }
netidx-archive = { path = "../netidx-archive" }
netidx-protocols = { path = "../netidx-protocols" }
netidx-container = { path = "../netidx-container" }
netidx-derive = { path = "../netidx-derive" }
netidx-wsproxy = { path = "../netidx-wsproxy" }
env_logger = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
poolshark = { workspace = true }
rand = { workspace = true }
tempdir = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
ctrlc = { workspace = true }
arcstr = { workspace = true }
