[package]
name = "json-pubsub-tools"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
async-std = {version = "1.4", features = ["unstable"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp = "0.8"
rmpv = "0.4"
rmp-serde = "0.14"
futures = "0.3"
json-pubsub = {path = ".."}
structopt = "0.3"
daemonize = "0.4"
failure = "0.1"
