[package]
name = "json-pubsub-tools"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp = "0.8"
rmpv = "0.4"
rmp-serde = "0.14"
json-pubsub = {path = ".."}
structopt = "0.3"
daemonize = "0.4"
bytes = "0.5"
anyhow = "1"
log = "0.4"
env_logger = "0.7"
