[package]
name = "netidx-archive"
version = "0.25.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "netidx archive file format"
documentation = "https://docs.rs/netidx-archive"
readme = "../README.md"
license = "MIT"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx = { path = "../netidx", version = "0.25.0", default_features = false }
netidx-netproto = { version = "0.25.0", path = "../netidx-netproto" }
netidx-protocols = { path = "../netidx-protocols", version = "0.25.0", default_features = false }
netidx-derive = { path = "../netidx-derive", version = "0.22.0" }
netidx-core = { path = "../netidx-core", version = "0.25.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
fs3 = { workspace = true }
memmap2 = { workspace = true }
fxhash = { workspace = true }
futures = { workspace = true }
arcstr = { workspace = true }
lazy_static = { workspace = true }
packed_struct = { workspace = true }
packed_struct_codegen = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
diligent-date-parser = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
zstd = { workspace = true }
smallvec = { workspace = true }
rand = { workspace = true }
