[package]
name = "netidx-archive"
version = "0.28.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "netidx archive file format"
documentation = "https://docs.rs/netidx-archive"
readme = "../README.md"
license = "MIT"
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx = { path = "../netidx", version = "0.28.0", default-features = false }
netidx-netproto = { version = "0.28.0", path = "../netidx-netproto" }
netidx-protocols = { path = "../netidx-protocols", version = "0.28.0", default-features = false }
netidx-derive = { path = "../netidx-derive", version = "0.22.0" }
netidx-core = { path = "../netidx-core", version = "0.28.0" }
env_logger = { workspace = true }
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
diligent-date-parser = { workspace = true }
fs3 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
num_cpus = { workspace = true }
packed_struct_codegen = { workspace = true }
packed_struct = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }
