[package]
name = "netidx-archive"
version = "0.30.1"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "netidx archive file format"
documentation = "https://docs.rs/netidx-archive"
readme = "../README.md"
license = "MIT"
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx = { path = "../netidx", version = "0.30.1", default-features = false }
netidx-netproto = { version = "0.30.1", path = "../netidx-netproto" }
netidx-protocols = { path = "../netidx-protocols", version = "0.30.1", default-features = false }
netidx-derive = { path = "../netidx-derive", version = "0.28.3" }
netidx-core = { path = "../netidx-core", version = "0.30.0" }
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
diligent-date-parser = { workspace = true }
env_logger = { workspace = true }
fs3 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
num_cpus = { workspace = true }
packed_struct = { workspace = true }
packed_struct_codegen = { workspace = true }
parking_lot = { workspace = true }
poolshark = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }
