[package]
name = "netidx-browser"
version = "0.26.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "graphical browser for netidx directories"
homepage = "https://netidx.github.io/netidx-book/"
readme = "../README.md"
repository = "https://github.com/estokes/netidx"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["gui"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[[bin]]
name = "netidx-browser"
path = "src/main.rs"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx-core = { path = "../netidx-core", version = "0.26.0" }
netidx-netproto = { path = "../netidx-netproto", version = "0.26.0" }
netidx = { path = "../netidx", version = "0.26.0", default-features = false }
netidx-bscript = { path = "../netidx-bscript", version = "0.26.0", default-features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.26.0", default-features = false }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
fxhash = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
gtk = { workspace = true }
pango = { workspace = true }
gio = { workspace = true }
glib = { workspace = true }
gdk = { workspace = true }
gdk-pixbuf = { workspace = true }
sourceview4 = { workspace = true }
plotters = { workspace = true }
plotters-backend = { workspace = true }
lazy_static = { workspace = true }
arcstr = { workspace = true }
radix_trie = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
