[package]
name = "netidx-browser"
version = "0.28.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx graphical browser"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[[bin]]
name = "netidx-browser"
path = "src/main.rs"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx-archive = { path = "../netidx-archive", version = "0.28.0", default-features = false }
netidx-bscript = { path = "../netidx-bscript", version = "0.28.0", default-features = false }
netidx-container = { path = "../netidx-container", version = "0.28.0", default-features = false }
netidx = { path = "../netidx", version = "0.28.0", default-features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.28.0", default-features = false }
netidx-tools-core = { path = "../netidx-tools-core", version = "0.28.0", default-features = false }
netidx-wsproxy = { path = "../netidx-wsproxy", version = "0.28.0", default-features = false }
anyhow = { workspace = true }
arcstr = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
compact_str = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
flexi_logger = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
hdrhistogram = { workspace = true }
iced = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
reedline = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
