[package]
name = "netidx-browser"
version = "0.31.5"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "graphical browser for netidx directories"
homepage = "https://netidx.github.io/netidx-book/"
readme = "../README.md"
repository = "https://github.com/estokes/netidx"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["gui"]

[[bin]]
name = "netidx-browser"
path = "src/main.rs"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx-core = { path = "../netidx-core" }
netidx-netproto = { path = "../netidx-netproto" }
netidx = { path = "../netidx", default-features = false }
graphix-rt = { workspace = true }
graphix-compiler = { workspace = true }
graphix-package = { workspace = true }
graphix-package-core = { workspace = true }
graphix-package-gui = { workspace = true }
poolshark = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
fxhash = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
arcstr = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
gtk = "0.18"
pango = "0.18"
gio = "0.18"
glib = "0.18"
gdk = "0.18"
gdk-pixbuf = "0.18"
sourceview4 = "0.5"
plotters = "0.3"
plotters-backend = "0.3"
radix_trie = "0.2"
