[package]
name = "netidx-bscript"
version = "0.26.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "An incremental scripting language for netidx"
documentation = "https://docs.rs/netidx-bscript"
readme = "../README.md"
license = "MIT"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx-netproto = { path = "../netidx-netproto", version = "0.26.0" }
netidx-core = { path = "../netidx-core", version = "0.26.0" }
netidx = { path = "../netidx", version = "0.26.0", default_features = false }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
fxhash = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
arcstr = { workspace = true }

[dev-dependencies]
proptest = "1"
