[package]
name = "netidx-bscript"
version = "0.27.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "An incremental scripting language for netidx"
documentation = "https://docs.rs/netidx-bscript"
readme = "../README.md"
license = "MIT"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
fxhash = { workspace = true }
lazy_static = { workspace = true }
netidx-core = { path = "../netidx-core", version = "0.26.0" }
netidx-netproto = { path = "../netidx-netproto", version = "0.27.2" }
netidx = { path = "../netidx", version = "0.27.0", default-features = false }
regex = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
triomphe = { workspace = true }

[dev-dependencies]
proptest = "1"
