[package]
name = "netidx-container"
version = "0.24.1"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx embeddable database"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx-container"
keywords = ["networking", "distributed", "kerberos", "database"]
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx-core = { path = "../netidx-core", version = "0.24.1" }
netidx = { path = "../netidx", version = "0.24.0", default_features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.24.0", default_features = false }
netidx-bscript = { path = "../netidx-bscript", version = "0.24.0", default_features = false }
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
structopt = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
arcstr = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
