[package]
name = "netidx-container"
version = "0.27.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx embeddable database"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx-container"
keywords = ["networking", "distributed", "kerberos", "database"]
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx = { path = "../netidx", version = "0.27.0", default-features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.27.0", default-features = false }
triomphe = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
sled = { workspace = true }
structopt = { workspace = true }
arcstr = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
