[package]
name = "netidx-container"
version = "0.31.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "netidx embeddable database"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx-container"
keywords = ["networking", "distributed", "kerberos", "database"]
categories = ["network-programming", "database"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx = { path = "../netidx", version = "0.31.0", default-features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.31.0", default-features = false }
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
poolshark = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
sled = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
derive_builder = { workspace = true }
