[package]
name = "netidx-core"
version = "0.22.20"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx core libraries"
homepage = "https://netidx.github.io/netidx-book/"
readme = "../README.md"
repository = "https://github.com/estokes/netidx"
documentation = "https://docs.rs/netidx"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[dependencies]
anyhow = "1"
arcstr = { version = "1", features = ["serde"] }
arrayvec = "0.7.4"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "^0.4.23", features = ["serde"] }
compact_str = { version = "0.7", features = ["serde"] }
crossbeam = "0.8"
digest = "0.10"
enumflags2 = "0.7"
futures = "0.3"
fxhash = "0.2"
indexmap = "2"
once_cell = "1.17.1"
parking_lot = "0.12.1"
pin-utils = "0.1"
rand = "0.8.5"
rust_decimal = { version = "1",  features = ["serde-with-float", "serde-with-str", "serde-with-arbitrary-precision"] }
serde_derive = "1"
serde = { version = "1.0", features = ["rc"] }
sha3 = "0.10"
smallvec = "1"
triomphe = "0.1"
uuid = "1"
#varint-simd = "0.4"
