[package]
name = "netidx-core"
version = "0.29.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "netidx core libraries"
homepage = "https://netidx.github.io/netidx-book/"
readme = "../README.md"
repository = "https://github.com/estokes/netidx"
documentation = "https://docs.rs/netidx"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
arrayvec = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
compact_str = { workspace = true }
crossbeam = { workspace = true }
digest = { workspace = true }
enumflags2 = { workspace = true }
escaping = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
pin-utils = { workspace = true }
poolshark = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
sha3 = { workspace = true }
smallvec = { workspace = true }
triomphe = { workspace = true }
uuid = { workspace = true }
