[package]
name = "netidx-derive"
version = "0.22.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Secure, fast, pub/sub messaging"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
documentation = "https://docs.rs/netidx-derive"
readme = "../README.md"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
