[package]
name = "netidx-incscript"
version = "0.7.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"
homepage = "https://estokes.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "An incremental scripting language for netidx"
documentation = "https://docs.rs/netidx-incscript"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netidx-core = { path = "../netidx-core", version = "0.7" }
netidx = { path = "../netidx", version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1"
serde = "1"
anyhow = "1"
bytes = "1"
base64 = "0.13"
combine = "4"
fxhash = "0.2"

[dev-dependencies]
proptest = "1"
