[package]
name = "netidx-netproto"
version = "0.26.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "netidx wire protocol"
documentation = "https://docs.rs/netidx-netproto"
readme = "../README.md"
license = "MIT"

[dependencies]
combine = { workspace = true }
netidx-core = { version = "0.26.0", path = "../netidx-core" }
netidx-derive = { version = "0.22", path = "../netidx-derive" }
bytes = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
fxhash = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
base64 = { workspace = true }
arcstr = { workspace = true }
smallvec = { workspace = true }
enumflags2 = { workspace = true }
indexmap = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1"
