[package]
name = "netidx-netproto"
version = "0.30.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "netidx wire protocol"
documentation = "https://docs.rs/netidx-netproto"
readme = "../README.md"
license = "MIT"
categories = ["network-programming"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bytes = { workspace = true }
escaping = { workspace = true }
globset = { workspace = true }
netidx-core = { version = "0.30.0", path = "../netidx-core" }
netidx-derive = { version = "0.28.3", path = "../netidx-derive" }
netidx-value = { version = "0.30.1", path = "../netidx-value" }
poolshark = { workspace = true }
seq-macro = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = "1"
chrono = { workspace = true }
rust_decimal = { workspace = true }
triomphe = { workspace = true }
immutable-chunkmap = { workspace = true }
uuid = { workspace = true }
