[package]
authors = ["Eric Stokes <letaris@gmail.com>"]
categories = ["caching", "memory-management"]
description = "Thread safe object pool"
documentation = "https://docs.rs/netidx-pool"
edition = "2024"
keywords = ["pool", "recycle", "object-pool"]
license = "MIT"
name = "netidx-pool"
readme = "README.md"
repository = "https://github.com/estokes/netidx"
version = "0.29.0"

[features]
default = ["triomphe", "indexmap", "serde"]
triomphe = ["dep:triomphe"]
indexmap = ["dep:indexmap"]
serde = ["dep:serde", "dep:serde_derive"]


[dependencies]
crossbeam-queue = { workspace = true }
fxhash = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
triomphe = { workspace = true, optional = true }
